--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -220,10 +220,10 @@
 
                 <ImageButton
                     style="@style/Widget.AppCompat.Button.Borderless"
+                    android:id="@+id/histroy"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:onClick="btnClick_history"
                     android:src="@drawable/ic_history_btn" />
 
                 <Button
