--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#55000000"
+    android:background = "#00FFFFFF"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -45,9 +44,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_7"
-            android:text="7"
+            android:text="@string/seven"
             android:textColor="@color/colorTextonPrimary"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            tools:ignore="NestedWeights" />
 
         <Button
             style="@style/Widget.AppCompat.Button.Borderless"
@@ -55,7 +55,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_8"
-            android:text="8"
+            android:text="@string/eight"
             android:textColor="@color/colorTextonPrimary"
             android:textSize="30sp" />
 
@@ -65,7 +65,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_9"
-            android:text="9"
+            android:text="@string/nine"
             android:textColor="@color/colorTextonPrimary"
             android:textSize="30sp" />
 
@@ -75,8 +75,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_add"
-            android:text="+"
-            android:textColor="@color/colorSecondaryDark"
+            android:text="@string/plus"
+            android:textColor="@color/colorTextonSecondary"
             android:textSize="30sp" />
 
         <ImageButton
@@ -85,7 +85,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_delete"
-            android:src="@drawable/ic_backspace_black_24dp" />
+            android:src="@drawable/ic_backspace_black_24dp"
+            android:contentDescription="@string/delete" />
 
     </LinearLayout>
 
@@ -102,9 +103,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_4"
-            android:text="4"
+            android:text="@string/four"
             android:textColor="@color/colorTextonPrimary"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            tools:ignore="NestedWeights" />
 
         <Button
             style="@style/Widget.AppCompat.Button.Borderless"
@@ -112,7 +114,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_5"
-            android:text="5"
+            android:text="@string/five"
             android:textColor="@color/colorTextonPrimary"
             android:textSize="30sp" />
 
@@ -122,7 +124,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_6"
-            android:text="6"
+            android:text="@string/six"
             android:textColor="@color/colorTextonPrimary"
             android:textSize="30sp" />
 
@@ -132,8 +134,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_subtract"
-            android:text="-"
-            android:textColor="@color/colorSecondaryDark"
+            android:text="@string/minus"
+            android:textColor="@color/colorTextonSecondary"
             android:textSize="30sp" />
 
         <Button
@@ -142,8 +144,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="btnClick_clear"
-            android:text="C"
-            android:textColor="@color/colorTextonPrimary"
+            android:text="@string/clear"
+            android:textColor="@color/colorTextonSecondary"
             android:textSize="24sp" />
 
     </LinearLayout>
@@ -151,134 +153,115 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:orientation="horizontal"
         android:weightSum="5">
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:orientation="vertical"
-            android:weightSum="2">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:weightSum="4">
-
-                <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:onClick="btnClick_1"
-                    android:text="1"
-                    android:textColor="@color/colorTextonPrimary"
-                    android:textSize="30sp" />
-
-                <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:onClick="btnClick_2"
-                    android:text="2"
-                    android:textColor="@color/colorTextonPrimary"
-                    android:textSize="30sp" />
-
-                <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:onClick="btnClick_3"
-                    android:text="3"
-                    android:textColor="@color/colorTextonPrimary"
-                    android:textSize="30sp" />
-
-                <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:onClick="btnClick_multiply"
-                    android:text="×"
-                    android:textColor="@color/colorSecondaryDark"
-                    android:textSize="30sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:weightSum="4">
-
-                <ImageButton
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:id="@+id/histroy"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_history_btn" />
-
-                <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:onClick="btnClick_0"
-                    android:text="0"
-                    android:textColor="@color/colorTextonPrimary"
-                    android:textSize="30sp" />
-
-                <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:onClick="btnClick_dot"
-                    android:text="."
-                    android:textColor="@color/colorTextonPrimary"
-                    android:textSize="30sp" />
-
-                <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:onClick="btnClick_divide"
-                    android:text="÷"
-                    android:textColor="@color/colorSecondaryDark"
-                    android:textSize="30sp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:weightSum="1">
+            android:onClick="btnClick_1"
+            android:text="@string/one"
+            android:textColor="@color/colorTextonPrimary"
+            android:textSize="30sp"
+            tools:ignore="NestedWeights" />
 
-            <Button
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:onClick="btnClick_equal"
-                android:text="="
-                android:textColor="@color/colorTextonPrimary"
-                android:textSize="30sp" />
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="btnClick_2"
+            android:text="@string/two"
+            android:textColor="@color/colorTextonPrimary"
+            android:textSize="30sp" />
 
-        </LinearLayout>
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="btnClick_3"
+            android:text="@string/three"
+            android:textColor="@color/colorTextonPrimary"
+            android:textSize="30sp" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="btnClick_multiply"
+            android:text="@string/multiply"
+            android:textColor="@color/colorTextonSecondary"
+            android:textSize="30sp" />
+
+        <ImageButton
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_camera"
+            android:contentDescription="@string/camera" />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="5">
 
+        <ImageButton
+            android:id="@+id/history"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_history_btn" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="btnClick_0"
+            android:text="@string/zero"
+            android:textColor="@color/colorTextonPrimary"
+            android:textSize="30sp"
+            tools:ignore="DuplicateSpeakableTextCheck" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="btnClick_dot"
+            android:text="@string/dot"
+            android:textColor="@color/colorTextonPrimary"
+            android:textSize="30sp" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="btnClick_divide"
+            android:text="@string/divide"
+            android:textColor="@color/colorTextonSecondary"
+            android:textSize="30sp" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="btnClick_equal"
+            android:text="@string/equal"
+            android:textColor="@color/colorTextonSecondary"
+            android:textSize="30sp" />
+
+    </LinearLayout>
 </LinearLayout>
