--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,19 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:id="@+id/scrollView6"
+        android:fillViewport="true">
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="wrap_content"
+            android:layout_height="130dp" />
+
+    </ScrollView>
+
+
     <TextView
         android:id="@+id/input"
         android:layout_width="match_parent"
