--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -217,7 +217,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/ic_camera"
-            android:onClick="openGoogleLens"
+            android:onClick="openLens"
             android:contentDescription="@string/camera" />
 
     </LinearLayout>
